Compilador-main/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FOR
    MEDIA
    MODA
    PLOTXY
    REG
    TO
    VARIANZA

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     PROGRAMA -> PROGRAM create_dirfunc ID SEMICOLON vars2 func2 principal
Rule 2     vars -> VAR tipo COLON id_list SEMICOLON
Rule 3     vars2 -> vars vars2
Rule 4     vars2 -> empty
Rule 5     id_list -> id_list COMMA ID addvar array
Rule 6     id_list -> ID addvar array
Rule 7     array -> L_BRACKET CTE_I addDim R_BRACKET jumpAddr
Rule 8     array -> empty
Rule 9     tipo -> INT current_type
Rule 10    tipo -> FLOAT current_type
Rule 11    tipo -> BOOL current_type
Rule 12    tipo -> CHAR current_type
Rule 13    func -> FUNCTION tipo_func ID addfunc L_PAREN params R_PAREN vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc
Rule 14    func2 -> func func2
Rule 15    func2 -> empty
Rule 16    tipo_func -> INT current_type
Rule 17    tipo_func -> FLOAT current_type
Rule 18    tipo_func -> CHAR current_type
Rule 19    tipo_func -> BOOL current_type
Rule 20    tipo_func -> VOID current_type
Rule 21    params -> tipo ID addvar updateParams params2
Rule 22    params -> empty
Rule 23    params2 -> COMMA tipo ID addvar updateParams params2
Rule 24    params2 -> empty
Rule 25    principal -> MAIN start funcChange L_PAREN R_PAREN bloque endProc
Rule 26    bloque -> L_BRACE estatuto_rep R_BRACE
Rule 27    estatuto_rep -> estatuto estatuto_rep
Rule 28    estatuto_rep -> empty
Rule 29    estatuto -> asignacion
Rule 30    estatuto -> condicion
Rule 31    estatuto -> escritura
Rule 32    estatuto -> llamada
Rule 33    estatuto -> retorno
Rule 34    estatuto -> lectura
Rule 35    estatuto -> repeticion
Rule 36    asignacion -> ID stack_operand_id EQUAL stack_operator expOr np_asignacion SEMICOLON
Rule 37    asignacion -> var_dim EQUAL stack_operator expOr np_asignacion SEMICOLON
Rule 38    llamada -> ID llamadaEra L_PAREN fakebottom parm checkParamNum R_PAREN checkparentesis Gosub
Rule 39    retorno -> RETURN L_PAREN expOr np_return R_PAREN SEMICOLON
Rule 40    lectura -> READ L_PAREN ID np_read R_PAREN SEMICOLON
Rule 41    escritura -> WRITE L_PAREN escritura_rep R_PAREN SEMICOLON
Rule 42    escritura_rep -> escritura_rep COMMA escritura_aux
Rule 43    escritura_rep -> escritura_aux
Rule 44    escritura_aux -> CTE_S printString
Rule 45    escritura_aux -> expOr np_print
Rule 46    condicion -> IF L_PAREN expOr R_PAREN GotoF THEN bloque else_aux
Rule 47    else_aux -> ELSE Goto bloque end_if
Rule 48    else_aux -> end_if
Rule 49    repeticion -> WHILE addJump L_PAREN expOr R_PAREN GotoF DO bloque end_while
Rule 50    parm -> expOr checkParam parm2
Rule 51    parm -> empty
Rule 52    parm2 -> COMMA expOr checkParam parm2
Rule 53    parm2 -> empty
Rule 54    expOr -> expAnd checkAndOr OR stack_operator expOr
Rule 55    expOr -> expAnd checkAndOr
Rule 56    expAnd -> expresion checkAndOr AND stack_operator expAnd
Rule 57    expAnd -> expresion checkAndOr
Rule 58    expresion -> exp checkrelop relop
Rule 59    relop -> GT stack_operator expresion
Rule 60    relop -> LT stack_operator expresion
Rule 61    relop -> EQ stack_operator expresion
Rule 62    relop -> LEQ stack_operator expresion
Rule 63    relop -> GEQ stack_operator expresion
Rule 64    relop -> empty
Rule 65    exp -> termino checkexp masmenos
Rule 66    masmenos -> PLUS stack_operator exp
Rule 67    masmenos -> MINUS stack_operator exp
Rule 68    masmenos -> empty
Rule 69    termino -> factor checkterm multdiv
Rule 70    multdiv -> MULT stack_operator termino
Rule 71    multdiv -> DIV stack_operator termino
Rule 72    multdiv -> empty
Rule 73    factor -> L_PAREN fakebottom expOr R_PAREN checkparentesis
Rule 74    factor -> var_cte
Rule 75    var_cte -> ID stack_operand_id
Rule 76    var_cte -> llamada
Rule 77    var_cte -> CTE_I stack_operand_int
Rule 78    var_cte -> CTE_F stack_operand_float
Rule 79    var_cte -> CTE_CHAR stack_operand_char
Rule 80    var_cte -> var_dim
Rule 81    var_dim -> ID stack_operand_id L_BRACKET verDim fakebottom expOr cuadVer R_BRACKET checkparentesis verDimNum cuadVarDim
Rule 82    empty -> <empty>
Rule 83    create_dirfunc -> <empty>
Rule 84    current_type -> <empty>
Rule 85    addvar -> <empty>
Rule 86    addfunc -> <empty>
Rule 87    stack_operand_id -> <empty>
Rule 88    stack_operand_int -> <empty>
Rule 89    stack_operand_float -> <empty>
Rule 90    stack_operand_char -> <empty>
Rule 91    stack_operator -> <empty>
Rule 92    fakebottom -> <empty>
Rule 93    checkparentesis -> <empty>
Rule 94    checkAndOr -> <empty>
Rule 95    checkterm -> <empty>
Rule 96    checkexp -> <empty>
Rule 97    checkrelop -> <empty>
Rule 98    llamadaEra -> <empty>
Rule 99    np_asignacion -> <empty>
Rule 100   np_return -> <empty>
Rule 101   GotoF -> <empty>
Rule 102   Goto -> <empty>
Rule 103   end_if -> <empty>
Rule 104   end_while -> <empty>
Rule 105   addJump -> <empty>
Rule 106   endFunc -> <empty>
Rule 107   updateParams -> <empty>
Rule 108   funcJump -> <empty>
Rule 109   funcChange -> <empty>
Rule 110   np_print -> <empty>
Rule 111   printString -> <empty>
Rule 112   np_read -> <empty>
Rule 113   start -> <empty>
Rule 114   endProc -> <empty>
Rule 115   checkParam -> <empty>
Rule 116   checkParamNum -> <empty>
Rule 117   Gosub -> <empty>
Rule 118   addDim -> <empty>
Rule 119   jumpAddr -> <empty>
Rule 120   verDim -> <empty>
Rule 121   verDimNum -> <empty>
Rule 122   cuadVer -> <empty>
Rule 123   cuadVarDim -> <empty>

Terminals, with rules where they appear

AND                  : 56
BOOL                 : 11 19
CHAR                 : 12 18
COLON                : 2
COMMA                : 5 23 42 52
CTE_CHAR             : 79
CTE_F                : 78
CTE_I                : 7 77
CTE_S                : 44
DIV                  : 71
DO                   : 49
ELSE                 : 47
EQ                   : 61
EQUAL                : 36 37
FLOAT                : 10 17
FOR                  : 
FUNCTION             : 13
GEQ                  : 63
GT                   : 59
ID                   : 1 5 6 13 21 23 36 38 40 75 81
IF                   : 46
INT                  : 9 16
LEQ                  : 62
LT                   : 60
L_BRACE              : 13 26
L_BRACKET            : 7 81
L_PAREN              : 13 25 38 39 40 41 46 49 73
MAIN                 : 25
MEDIA                : 
MINUS                : 67
MODA                 : 
MULT                 : 70
OR                   : 54
PLOTXY               : 
PLUS                 : 66
PROGRAM              : 1
READ                 : 40
REG                  : 
RETURN               : 39
R_BRACE              : 13 26
R_BRACKET            : 7 81
R_PAREN              : 13 25 38 39 40 41 46 49 73
SEMICOLON            : 1 2 36 37 39 40 41
THEN                 : 46
TO                   : 
VAR                  : 2
VARIANZA             : 
VOID                 : 20
WHILE                : 49
WRITE                : 41
error                : 

Nonterminals, with rules where they appear

Gosub                : 38
Goto                 : 47
GotoF                : 46 49
PROGRAMA             : 0
addDim               : 7
addJump              : 49
addfunc              : 13
addvar               : 5 6 21 23
array                : 5 6
asignacion           : 29
bloque               : 25 46 47 49
checkAndOr           : 54 55 56 57
checkParam           : 50 52
checkParamNum        : 38
checkexp             : 65
checkparentesis      : 38 73 81
checkrelop           : 58
checkterm            : 69
condicion            : 30
create_dirfunc       : 1
cuadVarDim           : 81
cuadVer              : 81
current_type         : 9 10 11 12 16 17 18 19 20
else_aux             : 46
empty                : 4 8 15 22 24 28 51 53 64 68 72
endFunc              : 13
endProc              : 25
end_if               : 47 48
end_while            : 49
escritura            : 31
escritura_aux        : 42 43
escritura_rep        : 41 42
estatuto             : 27
estatuto_rep         : 13 26 27
exp                  : 58 66 67
expAnd               : 54 55 56
expOr                : 36 37 39 45 46 49 50 52 54 73 81
expresion            : 56 57 59 60 61 62 63
factor               : 69
fakebottom           : 38 73 81
func                 : 14
func2                : 1 14
funcChange           : 25
funcJump             : 13
id_list              : 2 5
jumpAddr             : 7
lectura              : 34
llamada              : 32 76
llamadaEra           : 38
masmenos             : 65
multdiv              : 69
np_asignacion        : 36 37
np_print             : 45
np_read              : 40
np_return            : 39
params               : 13
params2              : 21 23
parm                 : 38
parm2                : 50 52
principal            : 1
printString          : 44
relop                : 58
repeticion           : 35
retorno              : 33
stack_operand_char   : 79
stack_operand_float  : 78
stack_operand_id     : 36 75 81
stack_operand_int    : 77
stack_operator       : 36 37 54 56 59 60 61 62 63 66 67 70 71
start                : 25
termino              : 65 70 71
tipo                 : 2 21 23
tipo_func            : 13
updateParams         : 21 23
var_cte              : 74
var_dim              : 37 80
vars                 : 3
vars2                : 1 3 13
verDim               : 81
verDimNum            : 81

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (1) PROGRAMA -> . PROGRAM create_dirfunc ID SEMICOLON vars2 func2 principal

    PROGRAM         shift and go to state 2

    PROGRAMA                       shift and go to state 1

state 1

    (0) S' -> PROGRAMA .



state 2

    (1) PROGRAMA -> PROGRAM . create_dirfunc ID SEMICOLON vars2 func2 principal
    (83) create_dirfunc -> .

    ID              reduce using rule 83 (create_dirfunc -> .)

    create_dirfunc                 shift and go to state 3

state 3

    (1) PROGRAMA -> PROGRAM create_dirfunc . ID SEMICOLON vars2 func2 principal

    ID              shift and go to state 4


state 4

    (1) PROGRAMA -> PROGRAM create_dirfunc ID . SEMICOLON vars2 func2 principal

    SEMICOLON       shift and go to state 5


state 5

    (1) PROGRAMA -> PROGRAM create_dirfunc ID SEMICOLON . vars2 func2 principal
    (3) vars2 -> . vars vars2
    (4) vars2 -> . empty
    (2) vars -> . VAR tipo COLON id_list SEMICOLON
    (82) empty -> .

    VAR             shift and go to state 9
    FUNCTION        reduce using rule 82 (empty -> .)
    MAIN            reduce using rule 82 (empty -> .)

    vars2                          shift and go to state 6
    vars                           shift and go to state 7
    empty                          shift and go to state 8

state 6

    (1) PROGRAMA -> PROGRAM create_dirfunc ID SEMICOLON vars2 . func2 principal
    (14) func2 -> . func func2
    (15) func2 -> . empty
    (13) func -> . FUNCTION tipo_func ID addfunc L_PAREN params R_PAREN vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc
    (82) empty -> .

    FUNCTION        shift and go to state 13
    MAIN            reduce using rule 82 (empty -> .)

    func2                          shift and go to state 10
    func                           shift and go to state 11
    empty                          shift and go to state 12

state 7

    (3) vars2 -> vars . vars2
    (3) vars2 -> . vars vars2
    (4) vars2 -> . empty
    (2) vars -> . VAR tipo COLON id_list SEMICOLON
    (82) empty -> .

    VAR             shift and go to state 9
    FUNCTION        reduce using rule 82 (empty -> .)
    MAIN            reduce using rule 82 (empty -> .)
    L_BRACE         reduce using rule 82 (empty -> .)

    vars                           shift and go to state 7
    vars2                          shift and go to state 14
    empty                          shift and go to state 8

state 8

    (4) vars2 -> empty .

    FUNCTION        reduce using rule 4 (vars2 -> empty .)
    MAIN            reduce using rule 4 (vars2 -> empty .)
    L_BRACE         reduce using rule 4 (vars2 -> empty .)


state 9

    (2) vars -> VAR . tipo COLON id_list SEMICOLON
    (9) tipo -> . INT current_type
    (10) tipo -> . FLOAT current_type
    (11) tipo -> . BOOL current_type
    (12) tipo -> . CHAR current_type

    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    BOOL            shift and go to state 18
    CHAR            shift and go to state 19

    tipo                           shift and go to state 15

state 10

    (1) PROGRAMA -> PROGRAM create_dirfunc ID SEMICOLON vars2 func2 . principal
    (25) principal -> . MAIN start funcChange L_PAREN R_PAREN bloque endProc

    MAIN            shift and go to state 21

    principal                      shift and go to state 20

state 11

    (14) func2 -> func . func2
    (14) func2 -> . func func2
    (15) func2 -> . empty
    (13) func -> . FUNCTION tipo_func ID addfunc L_PAREN params R_PAREN vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc
    (82) empty -> .

    FUNCTION        shift and go to state 13
    MAIN            reduce using rule 82 (empty -> .)

    func                           shift and go to state 11
    func2                          shift and go to state 22
    empty                          shift and go to state 12

state 12

    (15) func2 -> empty .

    MAIN            reduce using rule 15 (func2 -> empty .)


state 13

    (13) func -> FUNCTION . tipo_func ID addfunc L_PAREN params R_PAREN vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc
    (16) tipo_func -> . INT current_type
    (17) tipo_func -> . FLOAT current_type
    (18) tipo_func -> . CHAR current_type
    (19) tipo_func -> . BOOL current_type
    (20) tipo_func -> . VOID current_type

    INT             shift and go to state 24
    FLOAT           shift and go to state 25
    CHAR            shift and go to state 26
    BOOL            shift and go to state 27
    VOID            shift and go to state 28

    tipo_func                      shift and go to state 23

state 14

    (3) vars2 -> vars vars2 .

    FUNCTION        reduce using rule 3 (vars2 -> vars vars2 .)
    MAIN            reduce using rule 3 (vars2 -> vars vars2 .)
    L_BRACE         reduce using rule 3 (vars2 -> vars vars2 .)


state 15

    (2) vars -> VAR tipo . COLON id_list SEMICOLON

    COLON           shift and go to state 29


state 16

    (9) tipo -> INT . current_type
    (84) current_type -> .

    COLON           reduce using rule 84 (current_type -> .)
    ID              reduce using rule 84 (current_type -> .)

    current_type                   shift and go to state 30

state 17

    (10) tipo -> FLOAT . current_type
    (84) current_type -> .

    COLON           reduce using rule 84 (current_type -> .)
    ID              reduce using rule 84 (current_type -> .)

    current_type                   shift and go to state 31

state 18

    (11) tipo -> BOOL . current_type
    (84) current_type -> .

    COLON           reduce using rule 84 (current_type -> .)
    ID              reduce using rule 84 (current_type -> .)

    current_type                   shift and go to state 32

state 19

    (12) tipo -> CHAR . current_type
    (84) current_type -> .

    COLON           reduce using rule 84 (current_type -> .)
    ID              reduce using rule 84 (current_type -> .)

    current_type                   shift and go to state 33

state 20

    (1) PROGRAMA -> PROGRAM create_dirfunc ID SEMICOLON vars2 func2 principal .

    $end            reduce using rule 1 (PROGRAMA -> PROGRAM create_dirfunc ID SEMICOLON vars2 func2 principal .)


state 21

    (25) principal -> MAIN . start funcChange L_PAREN R_PAREN bloque endProc
    (113) start -> .

    L_PAREN         reduce using rule 113 (start -> .)

    start                          shift and go to state 34

state 22

    (14) func2 -> func func2 .

    MAIN            reduce using rule 14 (func2 -> func func2 .)


state 23

    (13) func -> FUNCTION tipo_func . ID addfunc L_PAREN params R_PAREN vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc

    ID              shift and go to state 35


state 24

    (16) tipo_func -> INT . current_type
    (84) current_type -> .

    ID              reduce using rule 84 (current_type -> .)

    current_type                   shift and go to state 36

state 25

    (17) tipo_func -> FLOAT . current_type
    (84) current_type -> .

    ID              reduce using rule 84 (current_type -> .)

    current_type                   shift and go to state 37

state 26

    (18) tipo_func -> CHAR . current_type
    (84) current_type -> .

    ID              reduce using rule 84 (current_type -> .)

    current_type                   shift and go to state 38

state 27

    (19) tipo_func -> BOOL . current_type
    (84) current_type -> .

    ID              reduce using rule 84 (current_type -> .)

    current_type                   shift and go to state 39

state 28

    (20) tipo_func -> VOID . current_type
    (84) current_type -> .

    ID              reduce using rule 84 (current_type -> .)

    current_type                   shift and go to state 40

state 29

    (2) vars -> VAR tipo COLON . id_list SEMICOLON
    (5) id_list -> . id_list COMMA ID addvar array
    (6) id_list -> . ID addvar array

    ID              shift and go to state 42

    id_list                        shift and go to state 41

state 30

    (9) tipo -> INT current_type .

    COLON           reduce using rule 9 (tipo -> INT current_type .)
    ID              reduce using rule 9 (tipo -> INT current_type .)


state 31

    (10) tipo -> FLOAT current_type .

    COLON           reduce using rule 10 (tipo -> FLOAT current_type .)
    ID              reduce using rule 10 (tipo -> FLOAT current_type .)


state 32

    (11) tipo -> BOOL current_type .

    COLON           reduce using rule 11 (tipo -> BOOL current_type .)
    ID              reduce using rule 11 (tipo -> BOOL current_type .)


state 33

    (12) tipo -> CHAR current_type .

    COLON           reduce using rule 12 (tipo -> CHAR current_type .)
    ID              reduce using rule 12 (tipo -> CHAR current_type .)


state 34

    (25) principal -> MAIN start . funcChange L_PAREN R_PAREN bloque endProc
    (109) funcChange -> .

    L_PAREN         reduce using rule 109 (funcChange -> .)

    funcChange                     shift and go to state 43

state 35

    (13) func -> FUNCTION tipo_func ID . addfunc L_PAREN params R_PAREN vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc
    (86) addfunc -> .

    L_PAREN         reduce using rule 86 (addfunc -> .)

    addfunc                        shift and go to state 44

state 36

    (16) tipo_func -> INT current_type .

    ID              reduce using rule 16 (tipo_func -> INT current_type .)


state 37

    (17) tipo_func -> FLOAT current_type .

    ID              reduce using rule 17 (tipo_func -> FLOAT current_type .)


state 38

    (18) tipo_func -> CHAR current_type .

    ID              reduce using rule 18 (tipo_func -> CHAR current_type .)


state 39

    (19) tipo_func -> BOOL current_type .

    ID              reduce using rule 19 (tipo_func -> BOOL current_type .)


state 40

    (20) tipo_func -> VOID current_type .

    ID              reduce using rule 20 (tipo_func -> VOID current_type .)


state 41

    (2) vars -> VAR tipo COLON id_list . SEMICOLON
    (5) id_list -> id_list . COMMA ID addvar array

    SEMICOLON       shift and go to state 45
    COMMA           shift and go to state 46


state 42

    (6) id_list -> ID . addvar array
    (85) addvar -> .

    L_BRACKET       reduce using rule 85 (addvar -> .)
    SEMICOLON       reduce using rule 85 (addvar -> .)
    COMMA           reduce using rule 85 (addvar -> .)

    addvar                         shift and go to state 47

state 43

    (25) principal -> MAIN start funcChange . L_PAREN R_PAREN bloque endProc

    L_PAREN         shift and go to state 48


state 44

    (13) func -> FUNCTION tipo_func ID addfunc . L_PAREN params R_PAREN vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc

    L_PAREN         shift and go to state 49


state 45

    (2) vars -> VAR tipo COLON id_list SEMICOLON .

    VAR             reduce using rule 2 (vars -> VAR tipo COLON id_list SEMICOLON .)
    FUNCTION        reduce using rule 2 (vars -> VAR tipo COLON id_list SEMICOLON .)
    MAIN            reduce using rule 2 (vars -> VAR tipo COLON id_list SEMICOLON .)
    L_BRACE         reduce using rule 2 (vars -> VAR tipo COLON id_list SEMICOLON .)


state 46

    (5) id_list -> id_list COMMA . ID addvar array

    ID              shift and go to state 50


state 47

    (6) id_list -> ID addvar . array
    (7) array -> . L_BRACKET CTE_I addDim R_BRACKET jumpAddr
    (8) array -> . empty
    (82) empty -> .

    L_BRACKET       shift and go to state 52
    SEMICOLON       reduce using rule 82 (empty -> .)
    COMMA           reduce using rule 82 (empty -> .)

    array                          shift and go to state 51
    empty                          shift and go to state 53

state 48

    (25) principal -> MAIN start funcChange L_PAREN . R_PAREN bloque endProc

    R_PAREN         shift and go to state 54


state 49

    (13) func -> FUNCTION tipo_func ID addfunc L_PAREN . params R_PAREN vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc
    (21) params -> . tipo ID addvar updateParams params2
    (22) params -> . empty
    (9) tipo -> . INT current_type
    (10) tipo -> . FLOAT current_type
    (11) tipo -> . BOOL current_type
    (12) tipo -> . CHAR current_type
    (82) empty -> .

    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    BOOL            shift and go to state 18
    CHAR            shift and go to state 19
    R_PAREN         reduce using rule 82 (empty -> .)

    params                         shift and go to state 55
    tipo                           shift and go to state 56
    empty                          shift and go to state 57

state 50

    (5) id_list -> id_list COMMA ID . addvar array
    (85) addvar -> .

    L_BRACKET       reduce using rule 85 (addvar -> .)
    SEMICOLON       reduce using rule 85 (addvar -> .)
    COMMA           reduce using rule 85 (addvar -> .)

    addvar                         shift and go to state 58

state 51

    (6) id_list -> ID addvar array .

    SEMICOLON       reduce using rule 6 (id_list -> ID addvar array .)
    COMMA           reduce using rule 6 (id_list -> ID addvar array .)


state 52

    (7) array -> L_BRACKET . CTE_I addDim R_BRACKET jumpAddr

    CTE_I           shift and go to state 59


state 53

    (8) array -> empty .

    SEMICOLON       reduce using rule 8 (array -> empty .)
    COMMA           reduce using rule 8 (array -> empty .)


state 54

    (25) principal -> MAIN start funcChange L_PAREN R_PAREN . bloque endProc
    (26) bloque -> . L_BRACE estatuto_rep R_BRACE

    L_BRACE         shift and go to state 61

    bloque                         shift and go to state 60

state 55

    (13) func -> FUNCTION tipo_func ID addfunc L_PAREN params . R_PAREN vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc

    R_PAREN         shift and go to state 62


state 56

    (21) params -> tipo . ID addvar updateParams params2

    ID              shift and go to state 63


state 57

    (22) params -> empty .

    R_PAREN         reduce using rule 22 (params -> empty .)


state 58

    (5) id_list -> id_list COMMA ID addvar . array
    (7) array -> . L_BRACKET CTE_I addDim R_BRACKET jumpAddr
    (8) array -> . empty
    (82) empty -> .

    L_BRACKET       shift and go to state 52
    SEMICOLON       reduce using rule 82 (empty -> .)
    COMMA           reduce using rule 82 (empty -> .)

    array                          shift and go to state 64
    empty                          shift and go to state 53

state 59

    (7) array -> L_BRACKET CTE_I . addDim R_BRACKET jumpAddr
    (118) addDim -> .

    R_BRACKET       reduce using rule 118 (addDim -> .)

    addDim                         shift and go to state 65

state 60

    (25) principal -> MAIN start funcChange L_PAREN R_PAREN bloque . endProc
    (114) endProc -> .

    $end            reduce using rule 114 (endProc -> .)

    endProc                        shift and go to state 66

state 61

    (26) bloque -> L_BRACE . estatuto_rep R_BRACE
    (27) estatuto_rep -> . estatuto estatuto_rep
    (28) estatuto_rep -> . empty
    (29) estatuto -> . asignacion
    (30) estatuto -> . condicion
    (31) estatuto -> . escritura
    (32) estatuto -> . llamada
    (33) estatuto -> . retorno
    (34) estatuto -> . lectura
    (35) estatuto -> . repeticion
    (82) empty -> .
    (36) asignacion -> . ID stack_operand_id EQUAL stack_operator expOr np_asignacion SEMICOLON
    (37) asignacion -> . var_dim EQUAL stack_operator expOr np_asignacion SEMICOLON
    (46) condicion -> . IF L_PAREN expOr R_PAREN GotoF THEN bloque else_aux
    (41) escritura -> . WRITE L_PAREN escritura_rep R_PAREN SEMICOLON
    (38) llamada -> . ID llamadaEra L_PAREN fakebottom parm checkParamNum R_PAREN checkparentesis Gosub
    (39) retorno -> . RETURN L_PAREN expOr np_return R_PAREN SEMICOLON
    (40) lectura -> . READ L_PAREN ID np_read R_PAREN SEMICOLON
    (49) repeticion -> . WHILE addJump L_PAREN expOr R_PAREN GotoF DO bloque end_while
    (81) var_dim -> . ID stack_operand_id L_BRACKET verDim fakebottom expOr cuadVer R_BRACKET checkparentesis verDimNum cuadVarDim

    R_BRACE         reduce using rule 82 (empty -> .)
    ID              shift and go to state 77
    IF              shift and go to state 79
    WRITE           shift and go to state 80
    RETURN          shift and go to state 81
    READ            shift and go to state 82
    WHILE           shift and go to state 83

    estatuto_rep                   shift and go to state 67
    estatuto                       shift and go to state 68
    empty                          shift and go to state 69
    asignacion                     shift and go to state 70
    condicion                      shift and go to state 71
    escritura                      shift and go to state 72
    llamada                        shift and go to state 73
    retorno                        shift and go to state 74
    lectura                        shift and go to state 75
    repeticion                     shift and go to state 76
    var_dim                        shift and go to state 78

state 62

    (13) func -> FUNCTION tipo_func ID addfunc L_PAREN params R_PAREN . vars2 L_BRACE funcJump estatuto_rep R_BRACE endFunc
    (3) vars2 -> . vars vars2
    (4) vars2 -> . empty
    (2) vars -> . VAR tipo COLON id_list SEMICOLON
    (82) empty -> .

    VAR             shift and go to state 9
    L_BRACE         reduce using rule 82 (empty -> .)

    vars2                          shift and go to state 84
    vars                           shift and go to state 7
    empty                          shift and go to state 8

state 63

    (21) params -> tipo ID . addvar updateParams params2
    (85) addvar -> .

    COMMA           reduce using rule 85 (addvar -> .)
    R_PAREN         reduce using rule 85 (addvar -> .)

    addvar                         shift and go to state 85

state 64

    (5) id_list -> id_list COMMA ID addvar array .

    SEMICOLON       reduce using rule 5 (id_list -> id_list COMMA ID addvar array .)
    COMMA           reduce using rule 5 (id_list -> id_list COMMA ID addvar array .)


state 65

    (7) array -> L_BRACKET CTE_I addDim . R_BRACKET jumpAddr

    R_BRACKET       shift and go to state 86


state 66

    (25) principal -> MAIN start funcChange L_PAREN R_PAREN bloque endProc .

    $end            reduce using rule 25 (principal -> MAIN start funcChange L_PAREN R_PAREN bloque endProc .)


state 67

    (26) bloque -> L_BRACE estatuto_rep . R_BRACE

    R_BRACE         shift and go to state 87


state 68

    (27) estatuto_rep -> estatuto . estatuto_rep
    (27) estatuto_rep -> . estatuto estatuto_rep
    (28) estatuto_rep -> . empty
    (29) estatuto -> . asignacion
    (30) estatuto -> . condicion
    (31) estatuto -> . escritura
    (32) estatuto -> . llamada
    (33) estatuto -> . retorno
    (34) estatuto -> . lectura
    (35) estatuto -> . repeticion
    (82) empty -> .
    (36) asignacion -> . ID stack_operand_id EQUAL stack_operator expOr np_asignacion SEMICOLON
    (37) asignacion -> . var_dim EQUAL stack_operator expOr np_asignacion SEMICOLON
    (46) condicion -> . IF L_PAREN expOr R_PAREN GotoF THEN bloque else_aux
    (41) escritura -> . WRITE L_PAREN escritura_rep R_PAREN SEMICOLON
    (38) llamada -> . ID llamadaEra L_PAREN fakebottom parm checkParamNum R_PAREN checkparentesis Gosub
    (39) retorno -> . RETURN L_PAREN expOr np_return R_PAREN SEMICOLON
    (40) lectura -> . READ L_PAREN ID np_read R_PAREN SEMICOLON
    (49) repeticion -> . WHILE addJump L_PAREN expOr R_PAREN GotoF DO bloque end_while
    (81) var_dim -> . ID stack_operand_id L_BRACKET verDim fakebottom expOr cuadVer R_BRACKET checkparentesis verDimNum cuadVarDim

    R_BRACE         reduce using rule 82 (empty -> .)
    ID              shift and go to state 77
    IF              shift and go to state 79
    WRITE           shift and go to state 80
    RETURN          shift and go to state 81
    READ            shift and go to state 82
    WHILE           shift and go to state 83

    estatuto                       shift and go to state 68
    estatuto_rep                   shift and go to state 88
    empty                          shift and go to state 69
    asignacion                     shift and go to state 70
    condicion                      shift and go to state 71
    escritura                      shift and go to state 72
    llamada                        shift and go to state 73
    retorno                        shift and go to state 74
    lectura                        shift and go to state 75
    repeticion                     shift and go to state 76
    var_dim                        shift and go to state 78

state 69

    (28) estatuto_rep -> empty .

    R_BRACE         reduce using rule 28 (estatuto_rep -> empty .)


state 70

    (29) estatuto -> asignacion .

    ID              reduce using rule 29 (estatuto -> asignacion .)
    IF              reduce using rule 29 (estatuto -> asignacion .)
    WRITE           reduce using rule 29 (estatuto -> asignacion .)
    RETURN          reduce using rule 29 (estatuto -> asignacion .)
    READ            reduce using rule 29 (estatuto -> asignacion .)
    WHILE           reduce using rule 29 (estatuto -> asignacion .)
    R_BRACE         reduce using rule 29 (estatuto -> asignacion .)


state 71

    (30) estatuto -> condicion .

    ID              reduce using rule 30 (estatuto -> condicion .)
    IF              reduce using rule 30 (estatuto -> condicion .)
    WRITE           reduce using rule 30 (estatuto -> condicion .)
    RETURN          reduce using rule 30 (estatuto -> condicion .)
    READ            reduce using rule 30 (estatuto -> condicion .)
    WHILE           reduce using rule 30 (estatuto -> condicion .)
    R_BRACE         reduce using rule 30 (estatuto -> condicion .)


state 72

    (31) estatuto -> escritura .

    ID              reduce using rule 31 (estatuto -> escritura .)
    IF              reduce using rule 31 (estatuto -> escritura .)
    WRITE           reduce using rule 31 (estatuto -> escritura .)
    RETURN          reduce using rule 31 (estatuto -> escritura .)
    READ            reduce using rule 31 (estatuto -> escritura .)
    WHILE           reduce using rule 31 (estatuto -> escritura .)
    R_BRACE         reduce using rule 31 (estatuto -> escritura .)


state 73

    (32) estatuto -> llamada .

    ID              reduce using rule 32 (estatuto -> llamada .)
    IF              reduce using rule 32 (estatuto -> llamada .)
    WRITE           reduce using rule 32 (estatuto -> llamada .)
    RETURN          reduce using rule 32 (estatuto -> llamada .)
    READ            reduce using rule 32 (estatuto -> llamada .)
    WHILE           reduce using rule 32 (estatuto -> llamada .)
    R_BRACE         reduce using rule 32 (estatuto -> llamada .)


state 74

    (33) estatuto -> retorno .

    ID              reduce using rule 33 (estatuto -> retorno .)
    IF              reduce using rule 33 (estatuto -> retorno .)
    WRITE           reduce using rule 33 (estatuto -> retorno .)
    RETURN          reduce using rule 33 (estatuto -> retorno .)
    READ            reduce using rule 33 (estatuto -> retorno .)
    WHILE           reduce using rule 33 (estatuto -> retorno .)
    R_BRACE         reduce using rule 33 (estatuto -> retorno .)


state 75

    (34) estatuto -> lectura .

    ID              reduce using rule 34 (estatuto -> lectura .)
    IF              reduce using rule 34 (estatuto -> lectura .)
    WRITE           reduce using rule 34 (estatuto -> lectura .)
    RETURN          reduce using rule 34 (estatuto -> lectura .)
    READ            reduce using rule 34 (estatuto -> lectura .)
    WHILE           reduce using rule 34 (estatuto -> lectura .)
    R_BRACE         reduce using rule 34 (estatuto -> lectura .)


state 76

    (35) estatuto -> repeticion .

    ID              reduce using rule 35 (estatuto -> repeticion .)
    IF              reduce using rule 35 (estatuto -> repeticion .)
    WRITE           reduce using rule 35 (estatuto -> repeticion .)
    RETURN          reduce using rule 35 (estatuto -> repeticion .)
    READ            reduce using rule 35 (estatuto -> repeticion .)
    WHILE           reduce using rule 35 (estatuto -> repeticion .)
    R_BRACE         reduce using rule 35 (estatuto -> repeticion .)


state 77
